[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
log = "0.4.27"
env_logger = "0.11.8"
common = { path = "../platforms/common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wxwork_group_bot = { path = "../platforms/wxwork_group_bot" }
